Sat Mar 24 23:07:42 GMT 2007  Olly Betts <olly@survex.com>

	* include/xapian/base.h: Add a note explaining why it's OK that
	  RefCntBase doesn't have a virtual destructor.

Sat Mar 24 01:30:17 GMT 2007  Olly Betts <olly@survex.com>

	* HACKING,configure.ac: Bump the automake required version to 1.9.5.
	  It was in Debian sarge, so any modern Linux distro should include
	  packages, and we've actually been bootstrapping with 1.9.6 for ages.

Thu Mar 22 00:53:35 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac: Disable probes for f77 more completely by preventing
	  the probe code from even appearing in configure.  Similarly
	  eliminate the code for gcj and rc probes - in total these changes
	  reduce the size of configure by 209KB (~25%).

Fri Mar 09 14:28:01 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* Makefile.am: Add include/xapian/error.h to list of headers to
	  install.

Thu Mar 08 17:16:08 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* generate-exceptions.in,exception_data.pm: Split definitions of
	  the exception hierarchy into a separate file, so it can be reused
	  elsewhere.
	* Makefile.am: Add exception_data.pm as a dependency for generating
	  error.h, and add it to EXTRA_DIST.

Fri Mar 09 06:42:40 GMT 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_cursor.cc,backends/flint/flint_cursor.h: We
	  always ignore the return value from FlintCursor::get_key() because
	  we only call it when it shouldn't fail, so restructure the code so
	  it can't fail and change the return value to void.

Fri Mar 09 06:33:09 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac: Suppress another aCC warning.

Thu Mar 08 20:39:46 GMT 2007  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony,tests/queryparsertest.cc: Allow
	  arbitrary characters in a range end (anything except whitespace
	  and ')').

Thu Mar 08 19:46:46 GMT 2007  Olly Betts <olly@survex.com>
