@@ -1,3 +1,8 @@
+Sun Mar 25 15:41:16 BST 2007  Olly Betts <olly@survex.com>
+
+	* bin/xapian-compact.cc: Prune unused docids off the start of each
+	  source database's range of docid.
+
 Sat Mar 24 23:07:42 GMT 2007  Olly Betts <olly@survex.com>
 
 	* include/xapian/base.h: Add a note explaining why it's OK that
